Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I116f21d11612f4efaf64cba7432f441f7552e9c5

--- a/res/values-mr/arrays.xml
+++ b/res/values-mr/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"लोकांचा गट"</item>
     <item msgid="2270003903304578284">"लाइटबल्ब"</item>
     <item msgid="4793496619091161864">"कॅलेंडर"</item>
-    <item msgid="355583383827414575">"धावणारी व्यक्ती"</item>
-    <item msgid="8001358013148723500">"गोल्फ"</item>
-    <item msgid="755931364157422565">"व्यायामशाळेतील डंबेल"</item>
-    <item msgid="1122491217891679043">"पोहणे"</item>
-    <item msgid="5825437763616894959">"हायकिंग करत असलेली व्यक्ती"</item>
-    <item msgid="7343381753556126903">"बॉल फेकत असलेली व्यक्ती"</item>
-    <item msgid="7785234702090595">"किक मारत असलेली व्यक्ती"</item>
-    <item msgid="8551370809943066311">"गेम कंट्रोलर"</item>
-    <item msgid="6613149523957360458">"कलाकाराकडील कलर पॅलेट"</item>
-    <item msgid="9183052350354526560">"स्नोफ्लेक"</item>
-    <item msgid="1589939022701519138">"समुद्रकिनाऱ्यावर वापरली जाणारी छत्री"</item>
-    <item msgid="4861295101659969850">"कारखान्यातील अवजारे"</item>
-    <item msgid="6817957885445446596">"तंबू"</item>
-    <item msgid="5923605807513411961">"फिल्म रील"</item>
-    <item msgid="7669095367618738070">"पुस्तक"</item>
-    <item msgid="2852435596978961693">"कमळाचे फूल"</item>
-    <item msgid="7021313931065738980">"व्यक्तीचे मन"</item>
-    <item msgid="6988657977896749103">"हेडफोन"</item>
-    <item msgid="7175373369979188147">"टीव्ही"</item>
-    <item msgid="8654852711800563054">"ट्रेन"</item>
-    <item msgid="165142533839452848">"कार"</item>
-    <item msgid="5359765481365992847">"क्रोसंट"</item>
+    <item msgid="5673625795644364100">"व्यत्यय आणू नका"</item>
+    <item msgid="1423820834865831361">"धावणारी व्यक्ती"</item>
+    <item msgid="2037298830718732608">"गोल्फ"</item>
+    <item msgid="2197835014443491074">"व्यायामशाळेतील डंबेल"</item>
+    <item msgid="2730180105015616518">"पोहणे"</item>
+    <item msgid="2666922823253345958">"हायकिंग करत असलेली व्यक्ती"</item>
+    <item msgid="8234880356472211396">"बॉल फेकत असलेली व्यक्ती"</item>
+    <item msgid="4642980625253001443">"किक मारत असलेली व्यक्ती"</item>
+    <item msgid="4324795269518833500">"गेम कंट्रोलर"</item>
+    <item msgid="7789966425125441125">"कलाकाराकडील कलर पॅलेट"</item>
+    <item msgid="663512680597461570">"स्नोफ्लेक"</item>
+    <item msgid="7952183800501346803">"समुद्रकिनाऱ्यावर वापरली जाणारी छत्री"</item>
+    <item msgid="799139025758265891">"कारखान्यातील अवजारे"</item>
+    <item msgid="1330084588359129896">"तंबू"</item>
+    <item msgid="3861584909935022342">"फिल्म रील"</item>
+    <item msgid="5827426100157335512">"पुस्तक"</item>
+    <item msgid="8585828346253128384">"कमळाचे फूल"</item>
+    <item msgid="8788370542815300188">"व्यक्तीचे मन"</item>
+    <item msgid="7287354964767553293">"हेडफोन"</item>
+    <item msgid="2530059623783800987">"टीव्ही"</item>
+    <item msgid="5307182323469376758">"ट्रेन"</item>
+    <item msgid="4903790544026923026">"कार"</item>
     <item msgid="5010405583912314582">"काटा आणि सुरी"</item>
     <item msgid="8939998598599064900">"शॉपिंग कार्ट"</item>
     <item msgid="3379605903308731893">"लहान मूल"</item>
