--- a/res/values-sv/arrays.xml
+++ b/res/values-sv/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"En grupp människor"</item>
     <item msgid="2270003903304578284">"Glödlampa"</item>
     <item msgid="4793496619091161864">"Kalender"</item>
-    <item msgid="355583383827414575">"Person som springer"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Gymhantel"</item>
-    <item msgid="1122491217891679043">"Simning"</item>
-    <item msgid="5825437763616894959">"Person som vandrar"</item>
-    <item msgid="7343381753556126903">"Person som kastar boll"</item>
-    <item msgid="7785234702090595">"Person som sparkar"</item>
-    <item msgid="8551370809943066311">"Spelkontroll"</item>
-    <item msgid="6613149523957360458">"Färgpalett för konstnär"</item>
-    <item msgid="9183052350354526560">"Snöflinga"</item>
-    <item msgid="1589939022701519138">"Strandparasoll"</item>
-    <item msgid="4861295101659969850">"Verktyg"</item>
-    <item msgid="6817957885445446596">"Tält"</item>
-    <item msgid="5923605807513411961">"Filmrulle"</item>
-    <item msgid="7669095367618738070">"Bok"</item>
-    <item msgid="2852435596978961693">"Lotusblomma"</item>
-    <item msgid="7021313931065738980">"Persons sinne"</item>
-    <item msgid="6988657977896749103">"Hörlurar"</item>
-    <item msgid="7175373369979188147">"Tv"</item>
-    <item msgid="8654852711800563054">"Tåg"</item>
-    <item msgid="165142533839452848">"Bil"</item>
-    <item msgid="5359765481365992847">"Croissant"</item>
+    <item msgid="5673625795644364100">"Stör ej"</item>
+    <item msgid="1423820834865831361">"Person som springer"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Gymhantel"</item>
+    <item msgid="2730180105015616518">"Simning"</item>
+    <item msgid="2666922823253345958">"Person som vandrar"</item>
+    <item msgid="8234880356472211396">"Person som kastar boll"</item>
+    <item msgid="4642980625253001443">"Person som sparkar"</item>
+    <item msgid="4324795269518833500">"Spelkontroll"</item>
+    <item msgid="7789966425125441125">"Färgpalett för konstnär"</item>
+    <item msgid="663512680597461570">"Snöflinga"</item>
+    <item msgid="7952183800501346803">"Strandparasoll"</item>
+    <item msgid="799139025758265891">"Verktyg"</item>
+    <item msgid="1330084588359129896">"Tält"</item>
+    <item msgid="3861584909935022342">"Filmrulle"</item>
+    <item msgid="5827426100157335512">"Bok"</item>
+    <item msgid="8585828346253128384">"Lotusblomma"</item>
+    <item msgid="8788370542815300188">"Persons sinne"</item>
+    <item msgid="7287354964767553293">"Hörlurar"</item>
+    <item msgid="2530059623783800987">"Tv"</item>
+    <item msgid="5307182323469376758">"Tåg"</item>
+    <item msgid="4903790544026923026">"Bil"</item>
     <item msgid="5010405583912314582">"Gaffel och kniv"</item>
     <item msgid="8939998598599064900">"Kundvagn"</item>
     <item msgid="3379605903308731893">"Barn"</item>
