--- a/res/values-ta/arrays.xml
+++ b/res/values-ta/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"குழு"</item>
     <item msgid="2270003903304578284">"பல்பு"</item>
     <item msgid="4793496619091161864">"கேலெண்டர்"</item>
-    <item msgid="355583383827414575">"ஒருவர் ஓடுகிறார்"</item>
-    <item msgid="8001358013148723500">"கோல்ஃப்"</item>
-    <item msgid="755931364157422565">"ஜிம் டம்பெல்"</item>
-    <item msgid="1122491217891679043">"நீச்சல்"</item>
-    <item msgid="5825437763616894959">"ஒருவர் மலையேறுகிறார்"</item>
-    <item msgid="7343381753556126903">"ஒரு நபர் பந்து வீசுகிறார்"</item>
-    <item msgid="7785234702090595">"ஒருவர் உதைக்கிறார்"</item>
-    <item msgid="8551370809943066311">"கேம் கண்ட்ரோலர்"</item>
-    <item msgid="6613149523957360458">"கலைஞரின் வண்ணத் தட்டு"</item>
-    <item msgid="9183052350354526560">"பனித்துகள்"</item>
-    <item msgid="1589939022701519138">"கடற்கரைக் குடை"</item>
-    <item msgid="4861295101659969850">"பணிமனைக் கருவிகள்"</item>
-    <item msgid="6817957885445446596">"கூடாரம்"</item>
-    <item msgid="5923605807513411961">"திரைப்பட ரீல்"</item>
-    <item msgid="7669095367618738070">"புத்தகம்"</item>
-    <item msgid="2852435596978961693">"தாமரைப் பூ"</item>
-    <item msgid="7021313931065738980">"மனித மூளை"</item>
-    <item msgid="6988657977896749103">"ஹெட்ஃபோன்கள்"</item>
-    <item msgid="7175373369979188147">"டிவி"</item>
-    <item msgid="8654852711800563054">"ரயில்"</item>
-    <item msgid="165142533839452848">"கார்"</item>
-    <item msgid="5359765481365992847">"குரோஸோண்ட்"</item>
+    <item msgid="5673625795644364100">"தொந்தரவு செய்ய வேண்டாம்"</item>
+    <item msgid="1423820834865831361">"ஒருவர் ஓடுகிறார்"</item>
+    <item msgid="2037298830718732608">"கோல்ஃப்"</item>
+    <item msgid="2197835014443491074">"ஜிம் டம்பெல்"</item>
+    <item msgid="2730180105015616518">"நீச்சல்"</item>
+    <item msgid="2666922823253345958">"ஒருவர் மலையேறுகிறார்"</item>
+    <item msgid="8234880356472211396">"ஒரு நபர் பந்து வீசுகிறார்"</item>
+    <item msgid="4642980625253001443">"ஒருவர் உதைக்கிறார்"</item>
+    <item msgid="4324795269518833500">"கேம் கண்ட்ரோலர்"</item>
+    <item msgid="7789966425125441125">"கலைஞரின் வண்ணத் தட்டு"</item>
+    <item msgid="663512680597461570">"பனித்துகள்"</item>
+    <item msgid="7952183800501346803">"கடற்கரைக் குடை"</item>
+    <item msgid="799139025758265891">"பணிமனைக் கருவிகள்"</item>
+    <item msgid="1330084588359129896">"கூடாரம்"</item>
+    <item msgid="3861584909935022342">"திரைப்பட ரீல்"</item>
+    <item msgid="5827426100157335512">"புத்தகம்"</item>
+    <item msgid="8585828346253128384">"தாமரைப் பூ"</item>
+    <item msgid="8788370542815300188">"மனித மூளை"</item>
+    <item msgid="7287354964767553293">"ஹெட்ஃபோன்கள்"</item>
+    <item msgid="2530059623783800987">"டிவி"</item>
+    <item msgid="5307182323469376758">"ரயில்"</item>
+    <item msgid="4903790544026923026">"கார்"</item>
     <item msgid="5010405583912314582">"முட்கரண்டியும் கத்தியும்"</item>
     <item msgid="8939998598599064900">"ஷாப்பிங் கார்ட்"</item>
     <item msgid="3379605903308731893">"பிள்ளை"</item>
