--- a/res/values-ar/arrays.xml
+++ b/res/values-ar/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"مجموعة من الأشخاص"</item>
     <item msgid="2270003903304578284">"مصباح كهربائي"</item>
     <item msgid="4793496619091161864">"تقويم"</item>
-    <item msgid="355583383827414575">"شخص يجري"</item>
-    <item msgid="8001358013148723500">"غولف"</item>
-    <item msgid="755931364157422565">"دمبل في صالة رياضية"</item>
-    <item msgid="1122491217891679043">"سباحة"</item>
-    <item msgid="5825437763616894959">"شخص يتنزه في الطبيعة"</item>
-    <item msgid="7343381753556126903">"شخص يرمي كرة"</item>
-    <item msgid="7785234702090595">"شخص يركل"</item>
-    <item msgid="8551370809943066311">"ذراع التحكّم في الألعاب"</item>
-    <item msgid="6613149523957360458">"لوحة ألوان الرسام"</item>
-    <item msgid="9183052350354526560">"ندفة ثلج"</item>
-    <item msgid="1589939022701519138">"مظلة شاطئ"</item>
-    <item msgid="4861295101659969850">"أدوات ورشة عمل"</item>
-    <item msgid="6817957885445446596">"Tent"</item>
-    <item msgid="5923605807513411961">"بكرة فيلم"</item>
-    <item msgid="7669095367618738070">"كتاب"</item>
-    <item msgid="2852435596978961693">"زهرة لوتس"</item>
-    <item msgid="7021313931065738980">"Person\'s mind"</item>
-    <item msgid="6988657977896749103">"سمّاعات رأس"</item>
-    <item msgid="7175373369979188147">"تلفزيون"</item>
-    <item msgid="8654852711800563054">"قطار"</item>
-    <item msgid="165142533839452848">"سيارة"</item>
-    <item msgid="5359765481365992847">"كرواسون"</item>
+    <item msgid="5673625795644364100">"عدم الإزعاج"</item>
+    <item msgid="1423820834865831361">"شخص يجري"</item>
+    <item msgid="2037298830718732608">"غولف"</item>
+    <item msgid="2197835014443491074">"دمبل في صالة رياضية"</item>
+    <item msgid="2730180105015616518">"سباحة"</item>
+    <item msgid="2666922823253345958">"شخص يتنزه في الطبيعة"</item>
+    <item msgid="8234880356472211396">"شخص يرمي كرة"</item>
+    <item msgid="4642980625253001443">"شخص يركل"</item>
+    <item msgid="4324795269518833500">"ذراع التحكّم في الألعاب"</item>
+    <item msgid="7789966425125441125">"لوحة ألوان الرسام"</item>
+    <item msgid="663512680597461570">"ندفة ثلج"</item>
+    <item msgid="7952183800501346803">"مظلة شاطئ"</item>
+    <item msgid="799139025758265891">"أدوات ورشة عمل"</item>
+    <item msgid="1330084588359129896">"Tent"</item>
+    <item msgid="3861584909935022342">"بكرة فيلم"</item>
+    <item msgid="5827426100157335512">"كتاب"</item>
+    <item msgid="8585828346253128384">"زهرة لوتس"</item>
+    <item msgid="8788370542815300188">"Person\'s mind"</item>
+    <item msgid="7287354964767553293">"سمّاعات رأس"</item>
+    <item msgid="2530059623783800987">"تلفزيون"</item>
+    <item msgid="5307182323469376758">"قطار"</item>
+    <item msgid="4903790544026923026">"سيارة"</item>
     <item msgid="5010405583912314582">"شوكة وسكينة"</item>
     <item msgid="8939998598599064900">"سلة تسوّق"</item>
     <item msgid="3379605903308731893">"طفل"</item>
