--- a/res/values-as/arrays.xml
+++ b/res/values-as/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"লোকসকলৰ গোট"</item>
     <item msgid="2270003903304578284">"লাইটৰ বাল্ব"</item>
     <item msgid="4793496619091161864">"কেলেণ্ডাৰ"</item>
-    <item msgid="355583383827414575">"দৌৰি থকা ব্যক্তি"</item>
-    <item msgid="8001358013148723500">"গল্ফ"</item>
-    <item msgid="755931364157422565">"ব্যায়ামাগাৰৰ ডাম্বেল"</item>
-    <item msgid="1122491217891679043">"সাঁতোৰা"</item>
-    <item msgid="5825437763616894959">"পাহাৰ বগাই থকা ব্যক্তি"</item>
-    <item msgid="7343381753556126903">"বল দলিয়াই থকা ব্যক্তি"</item>
-    <item msgid="7785234702090595">"গোৰ মাৰি থকা ব্যক্তি"</item>
-    <item msgid="8551370809943066311">"গে’ম নিয়ন্ত্ৰক"</item>
-    <item msgid="6613149523957360458">"শিল্পীৰ ৰঙৰ পেলেট"</item>
-    <item msgid="9183052350354526560">"তুষাৰ কণিকা"</item>
-    <item msgid="1589939022701519138">"সমুদ্ৰতীৰৰ ছাতি"</item>
-    <item msgid="4861295101659969850">"কৰ্মশালাৰ সঁজুলি"</item>
-    <item msgid="6817957885445446596">"তম্বু"</item>
-    <item msgid="5923605807513411961">"ফিল্মৰ ৰীল"</item>
-    <item msgid="7669095367618738070">"কিতাপ"</item>
-    <item msgid="2852435596978961693">"পদুম ফুল"</item>
-    <item msgid="7021313931065738980">"ব্যক্তিৰ মন"</item>
-    <item msgid="6988657977896749103">"হেডফ’ন"</item>
-    <item msgid="7175373369979188147">"টিভি"</item>
-    <item msgid="8654852711800563054">"ৰে’ল"</item>
-    <item msgid="165142533839452848">"গাড়ী"</item>
-    <item msgid="5359765481365992847">"ক্ৰইছাণ্ট"</item>
+    <item msgid="5673625795644364100">"অসুবিধা নিদিব ম’ড"</item>
+    <item msgid="1423820834865831361">"দৌৰি থকা ব্যক্তি"</item>
+    <item msgid="2037298830718732608">"গল্ফ"</item>
+    <item msgid="2197835014443491074">"ব্যায়ামাগাৰৰ ডাম্বেল"</item>
+    <item msgid="2730180105015616518">"সাঁতোৰা"</item>
+    <item msgid="2666922823253345958">"পাহাৰ বগাই থকা ব্যক্তি"</item>
+    <item msgid="8234880356472211396">"বল দলিয়াই থকা ব্যক্তি"</item>
+    <item msgid="4642980625253001443">"গোৰ মাৰি থকা ব্যক্তি"</item>
+    <item msgid="4324795269518833500">"গে’ম নিয়ন্ত্ৰক"</item>
+    <item msgid="7789966425125441125">"শিল্পীৰ ৰঙৰ পেলেট"</item>
+    <item msgid="663512680597461570">"তুষাৰ কণিকা"</item>
+    <item msgid="7952183800501346803">"সমুদ্ৰতীৰৰ ছাতি"</item>
+    <item msgid="799139025758265891">"কৰ্মশালাৰ সঁজুলি"</item>
+    <item msgid="1330084588359129896">"তম্বু"</item>
+    <item msgid="3861584909935022342">"ফিল্মৰ ৰীল"</item>
+    <item msgid="5827426100157335512">"কিতাপ"</item>
+    <item msgid="8585828346253128384">"পদুম ফুল"</item>
+    <item msgid="8788370542815300188">"ব্যক্তিৰ মন"</item>
+    <item msgid="7287354964767553293">"হেডফ’ন"</item>
+    <item msgid="2530059623783800987">"টিভি"</item>
+    <item msgid="5307182323469376758">"ৰে’ল"</item>
+    <item msgid="4903790544026923026">"গাড়ী"</item>
     <item msgid="5010405583912314582">"কাঁটাচামুচ আৰু ছুৰী কটাৰী"</item>
     <item msgid="8939998598599064900">"শ্বপিং কাৰ্ট"</item>
     <item msgid="3379605903308731893">"শিশু"</item>
