--- a/res/values-az/arrays.xml
+++ b/res/values-az/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"İnsan qrupu"</item>
     <item msgid="2270003903304578284">"Elektrik lampası"</item>
     <item msgid="4793496619091161864">"Təqvim"</item>
-    <item msgid="355583383827414575">"Qaçan insan"</item>
-    <item msgid="8001358013148723500">"Qolf"</item>
-    <item msgid="755931364157422565">"İdman zalı qanteli"</item>
-    <item msgid="1122491217891679043">"Üzgüçülük"</item>
-    <item msgid="5825437763616894959">"Haykinq edən insan"</item>
-    <item msgid="7343381753556126903">"Top atan insan"</item>
-    <item msgid="7785234702090595">"Təpik vuran insan"</item>
-    <item msgid="8551370809943066311">"Oyun kontrolleri"</item>
-    <item msgid="6613149523957360458">"Rəssamın rəng palitrası"</item>
-    <item msgid="9183052350354526560">"Qar uçqunu"</item>
-    <item msgid="1589939022701519138">"Çimərlik çətiri"</item>
-    <item msgid="4861295101659969850">"Emalatxana alətləri"</item>
-    <item msgid="6817957885445446596">"Çadır"</item>
-    <item msgid="5923605807513411961">"Kinolent"</item>
-    <item msgid="7669095367618738070">"Kitab"</item>
-    <item msgid="2852435596978961693">"Lotus çiçəyi"</item>
-    <item msgid="7021313931065738980">"İnsan zehni"</item>
-    <item msgid="6988657977896749103">"Qulaqlıqlar"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Qatar"</item>
-    <item msgid="165142533839452848">"Avtomobil"</item>
-    <item msgid="5359765481365992847">"Kruassan"</item>
+    <item msgid="5673625795644364100">"Narahat Etməyin"</item>
+    <item msgid="1423820834865831361">"Qaçan insan"</item>
+    <item msgid="2037298830718732608">"Qolf"</item>
+    <item msgid="2197835014443491074">"İdman zalı qanteli"</item>
+    <item msgid="2730180105015616518">"Üzgüçülük"</item>
+    <item msgid="2666922823253345958">"Haykinq edən insan"</item>
+    <item msgid="8234880356472211396">"Top atan insan"</item>
+    <item msgid="4642980625253001443">"Təpik vuran insan"</item>
+    <item msgid="4324795269518833500">"Oyun kontrolleri"</item>
+    <item msgid="7789966425125441125">"Rəssamın rəng palitrası"</item>
+    <item msgid="663512680597461570">"Qar uçqunu"</item>
+    <item msgid="7952183800501346803">"Çimərlik çətiri"</item>
+    <item msgid="799139025758265891">"Emalatxana alətləri"</item>
+    <item msgid="1330084588359129896">"Çadır"</item>
+    <item msgid="3861584909935022342">"Kinolent"</item>
+    <item msgid="5827426100157335512">"Kitab"</item>
+    <item msgid="8585828346253128384">"Lotus çiçəyi"</item>
+    <item msgid="8788370542815300188">"İnsan zehni"</item>
+    <item msgid="7287354964767553293">"Qulaqlıqlar"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Qatar"</item>
+    <item msgid="4903790544026923026">"Avtomobil"</item>
     <item msgid="5010405583912314582">"Çəngəl-bıçaq"</item>
     <item msgid="8939998598599064900">"Səbət"</item>
     <item msgid="3379605903308731893">"Uşaq"</item>
