--- a/res/values-bs/arrays.xml
+++ b/res/values-bs/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Grupa osoba"</item>
     <item msgid="2270003903304578284">"Sijalica"</item>
     <item msgid="4793496619091161864">"Kalendar"</item>
-    <item msgid="355583383827414575">"Osoba trči"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Bučica za teretanu"</item>
-    <item msgid="1122491217891679043">"Plivanje"</item>
-    <item msgid="5825437763616894959">"Osoba pješači"</item>
-    <item msgid="7343381753556126903">"Osoba baca loptu"</item>
-    <item msgid="7785234702090595">"Osoba udara"</item>
-    <item msgid="8551370809943066311">"Kontroler za igre"</item>
-    <item msgid="6613149523957360458">"Slikarska paleta"</item>
-    <item msgid="9183052350354526560">"Pahuljica"</item>
-    <item msgid="1589939022701519138">"Suncobran"</item>
-    <item msgid="4861295101659969850">"Alati radionice"</item>
-    <item msgid="6817957885445446596">"Šator"</item>
-    <item msgid="5923605807513411961">"Filmska traka"</item>
-    <item msgid="7669095367618738070">"Knjiga"</item>
-    <item msgid="2852435596978961693">"Cvijet lotosa"</item>
-    <item msgid="7021313931065738980">"Um osobe"</item>
-    <item msgid="6988657977896749103">"Slušalice"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Voz"</item>
-    <item msgid="165142533839452848">"Automobil"</item>
-    <item msgid="5359765481365992847">"Kroasan"</item>
+    <item msgid="5673625795644364100">"Ne ometaj"</item>
+    <item msgid="1423820834865831361">"Osoba trči"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Bučica za teretanu"</item>
+    <item msgid="2730180105015616518">"Plivanje"</item>
+    <item msgid="2666922823253345958">"Osoba pješači"</item>
+    <item msgid="8234880356472211396">"Osoba baca loptu"</item>
+    <item msgid="4642980625253001443">"Osoba udara"</item>
+    <item msgid="4324795269518833500">"Kontroler za igre"</item>
+    <item msgid="7789966425125441125">"Slikarska paleta"</item>
+    <item msgid="663512680597461570">"Pahuljica"</item>
+    <item msgid="7952183800501346803">"Suncobran"</item>
+    <item msgid="799139025758265891">"Alati radionice"</item>
+    <item msgid="1330084588359129896">"Šator"</item>
+    <item msgid="3861584909935022342">"Filmska traka"</item>
+    <item msgid="5827426100157335512">"Knjiga"</item>
+    <item msgid="8585828346253128384">"Cvijet lotosa"</item>
+    <item msgid="8788370542815300188">"Um osobe"</item>
+    <item msgid="7287354964767553293">"Slušalice"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Voz"</item>
+    <item msgid="4903790544026923026">"Automobil"</item>
     <item msgid="5010405583912314582">"Viljuška i nož"</item>
     <item msgid="8939998598599064900">"Kolica za kupovinu"</item>
     <item msgid="3379605903308731893">"Dijete"</item>
