--- a/res/values-en-rCA/arrays.xml
+++ b/res/values-en-rCA/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Group of people"</item>
     <item msgid="2270003903304578284">"Lightbulb"</item>
     <item msgid="4793496619091161864">"Calendar"</item>
-    <item msgid="355583383827414575">"Person running"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Gym dumbbell"</item>
-    <item msgid="1122491217891679043">"Swimming"</item>
-    <item msgid="5825437763616894959">"Person hiking"</item>
-    <item msgid="7343381753556126903">"Person throwing ball"</item>
-    <item msgid="7785234702090595">"Person kicking"</item>
-    <item msgid="8551370809943066311">"Game controller"</item>
-    <item msgid="6613149523957360458">"Artist color palette"</item>
-    <item msgid="9183052350354526560">"Snowflake"</item>
-    <item msgid="1589939022701519138">"Beach umbrella"</item>
-    <item msgid="4861295101659969850">"Workshop tools"</item>
-    <item msgid="6817957885445446596">"Tent"</item>
-    <item msgid="5923605807513411961">"Film reel"</item>
-    <item msgid="7669095367618738070">"Book"</item>
-    <item msgid="2852435596978961693">"Lotus flower"</item>
-    <item msgid="7021313931065738980">"Person\'s mind"</item>
-    <item msgid="6988657977896749103">"Headphones"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Train"</item>
-    <item msgid="165142533839452848">"Car"</item>
-    <item msgid="5359765481365992847">"Croissant"</item>
+    <item msgid="5673625795644364100">"Do Not Disturb"</item>
+    <item msgid="1423820834865831361">"Person running"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Gym dumbbell"</item>
+    <item msgid="2730180105015616518">"Swimming"</item>
+    <item msgid="2666922823253345958">"Person hiking"</item>
+    <item msgid="8234880356472211396">"Person throwing ball"</item>
+    <item msgid="4642980625253001443">"Person kicking"</item>
+    <item msgid="4324795269518833500">"Game controller"</item>
+    <item msgid="7789966425125441125">"Artist color palette"</item>
+    <item msgid="663512680597461570">"Snowflake"</item>
+    <item msgid="7952183800501346803">"Beach umbrella"</item>
+    <item msgid="799139025758265891">"Workshop tools"</item>
+    <item msgid="1330084588359129896">"Tent"</item>
+    <item msgid="3861584909935022342">"Film reel"</item>
+    <item msgid="5827426100157335512">"Book"</item>
+    <item msgid="8585828346253128384">"Lotus flower"</item>
+    <item msgid="8788370542815300188">"Person\'s mind"</item>
+    <item msgid="7287354964767553293">"Headphones"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Train"</item>
+    <item msgid="4903790544026923026">"Car"</item>
     <item msgid="5010405583912314582">"Fork and knife"</item>
     <item msgid="8939998598599064900">"Shopping cart"</item>
     <item msgid="3379605903308731893">"Child"</item>
