--- a/res/values-eu/arrays.xml
+++ b/res/values-eu/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Pertsona taldea"</item>
     <item msgid="2270003903304578284">"Bonbilla"</item>
     <item msgid="4793496619091161864">"Egutegia"</item>
-    <item msgid="355583383827414575">"Pertsona bat korrika"</item>
-    <item msgid="8001358013148723500">"Golfa"</item>
-    <item msgid="755931364157422565">"Gimnasioko pisua"</item>
-    <item msgid="1122491217891679043">"Igeriketa"</item>
-    <item msgid="5825437763616894959">"Pertsona bat mendian"</item>
-    <item msgid="7343381753556126903">"Pertsona bat pilota bat botatzen"</item>
-    <item msgid="7785234702090595">"Pertsona bat ostiko egiten"</item>
-    <item msgid="8551370809943066311">"Joko-kontrolagailua"</item>
-    <item msgid="6613149523957360458">"Artisten kolore-paleta"</item>
-    <item msgid="9183052350354526560">"Elur-maluta"</item>
-    <item msgid="1589939022701519138">"Eguzkitakoa"</item>
-    <item msgid="4861295101659969850">"Lantegiko tresnak"</item>
-    <item msgid="6817957885445446596">"Kanpin-denda"</item>
-    <item msgid="5923605807513411961">"Film-bobina"</item>
-    <item msgid="7669095367618738070">"Liburua"</item>
-    <item msgid="2852435596978961693">"Loto-lorea"</item>
-    <item msgid="7021313931065738980">"Pertsona baten burua"</item>
-    <item msgid="6988657977896749103">"Entzungailuak"</item>
-    <item msgid="7175373369979188147">"Telebista"</item>
-    <item msgid="8654852711800563054">"Trena"</item>
-    <item msgid="165142533839452848">"Autoa"</item>
-    <item msgid="5359765481365992847">"Croissanta"</item>
+    <item msgid="5673625795644364100">"Ez molestatzeko modua"</item>
+    <item msgid="1423820834865831361">"Pertsona bat korrika"</item>
+    <item msgid="2037298830718732608">"Golfa"</item>
+    <item msgid="2197835014443491074">"Gimnasioko pisua"</item>
+    <item msgid="2730180105015616518">"Igeriketa"</item>
+    <item msgid="2666922823253345958">"Pertsona bat mendian"</item>
+    <item msgid="8234880356472211396">"Pertsona bat pilota bat botatzen"</item>
+    <item msgid="4642980625253001443">"Pertsona bat ostiko egiten"</item>
+    <item msgid="4324795269518833500">"Joko-kontrolagailua"</item>
+    <item msgid="7789966425125441125">"Artisten kolore-paleta"</item>
+    <item msgid="663512680597461570">"Elur-maluta"</item>
+    <item msgid="7952183800501346803">"Eguzkitakoa"</item>
+    <item msgid="799139025758265891">"Lantegiko tresnak"</item>
+    <item msgid="1330084588359129896">"Kanpin-denda"</item>
+    <item msgid="3861584909935022342">"Film-bobina"</item>
+    <item msgid="5827426100157335512">"Liburua"</item>
+    <item msgid="8585828346253128384">"Loto-lorea"</item>
+    <item msgid="8788370542815300188">"Pertsona baten burua"</item>
+    <item msgid="7287354964767553293">"Entzungailuak"</item>
+    <item msgid="2530059623783800987">"Telebista"</item>
+    <item msgid="5307182323469376758">"Trena"</item>
+    <item msgid="4903790544026923026">"Autoa"</item>
     <item msgid="5010405583912314582">"Sardexka eta labana"</item>
     <item msgid="8939998598599064900">"Erosketa-saskia"</item>
     <item msgid="3379605903308731893">"Haurra"</item>
