--- a/res/values-fa/arrays.xml
+++ b/res/values-fa/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"گروهی از افراد"</item>
     <item msgid="2270003903304578284">"لامپ حبابی"</item>
     <item msgid="4793496619091161864">"تقویم"</item>
-    <item msgid="355583383827414575">"فردی درحال دویدن"</item>
-    <item msgid="8001358013148723500">"گلف"</item>
-    <item msgid="755931364157422565">"دمبل باشگاهی"</item>
-    <item msgid="1122491217891679043">"شنا"</item>
-    <item msgid="5825437763616894959">"فردی درحال پیاده‌گردی"</item>
-    <item msgid="7343381753556126903">"فردی درحال توپ انداختن"</item>
-    <item msgid="7785234702090595">"فردی درحال لگد زدن"</item>
-    <item msgid="8551370809943066311">"کنترل بازی"</item>
-    <item msgid="6613149523957360458">"پالت رنگ هنرمند"</item>
-    <item msgid="9183052350354526560">"دانه برف"</item>
-    <item msgid="1589939022701519138">"چتر ساحلی"</item>
-    <item msgid="4861295101659969850">"ابزارهای کارگاه"</item>
-    <item msgid="6817957885445446596">"چادر"</item>
-    <item msgid="5923605807513411961">"حلقه فیلم"</item>
-    <item msgid="7669095367618738070">"کتاب"</item>
-    <item msgid="2852435596978961693">"گل نیلوفر آبی"</item>
-    <item msgid="7021313931065738980">"ذهن فرد"</item>
-    <item msgid="6988657977896749103">"هدفون"</item>
-    <item msgid="7175373369979188147">"تلویزیون"</item>
-    <item msgid="8654852711800563054">"قطار"</item>
-    <item msgid="165142533839452848">"خودرو"</item>
-    <item msgid="5359765481365992847">"کروسان"</item>
+    <item msgid="5673625795644364100">"مزاحم نشوید"</item>
+    <item msgid="1423820834865831361">"فردی درحال دویدن"</item>
+    <item msgid="2037298830718732608">"گلف"</item>
+    <item msgid="2197835014443491074">"دمبل باشگاهی"</item>
+    <item msgid="2730180105015616518">"شنا"</item>
+    <item msgid="2666922823253345958">"فردی درحال پیاده‌گردی"</item>
+    <item msgid="8234880356472211396">"فردی درحال توپ انداختن"</item>
+    <item msgid="4642980625253001443">"فردی درحال لگد زدن"</item>
+    <item msgid="4324795269518833500">"کنترل بازی"</item>
+    <item msgid="7789966425125441125">"پالت رنگ هنرمند"</item>
+    <item msgid="663512680597461570">"دانه برف"</item>
+    <item msgid="7952183800501346803">"چتر ساحلی"</item>
+    <item msgid="799139025758265891">"ابزارهای کارگاه"</item>
+    <item msgid="1330084588359129896">"چادر"</item>
+    <item msgid="3861584909935022342">"حلقه فیلم"</item>
+    <item msgid="5827426100157335512">"کتاب"</item>
+    <item msgid="8585828346253128384">"گل نیلوفر آبی"</item>
+    <item msgid="8788370542815300188">"ذهن فرد"</item>
+    <item msgid="7287354964767553293">"هدفون"</item>
+    <item msgid="2530059623783800987">"تلویزیون"</item>
+    <item msgid="5307182323469376758">"قطار"</item>
+    <item msgid="4903790544026923026">"خودرو"</item>
     <item msgid="5010405583912314582">"کارد و چنگال"</item>
     <item msgid="8939998598599064900">"سبد خرید"</item>
     <item msgid="3379605903308731893">"کودک"</item>
