--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Groupe de personnes"</item>
     <item msgid="2270003903304578284">"Ampoule"</item>
     <item msgid="4793496619091161864">"Agenda"</item>
-    <item msgid="355583383827414575">"Personne qui court"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Haltère"</item>
-    <item msgid="1122491217891679043">"Natation"</item>
-    <item msgid="5825437763616894959">"Personne faisant de la randonnée"</item>
-    <item msgid="7343381753556126903">"Personne lançant une balle"</item>
-    <item msgid="7785234702090595">"Personne donnant un coup de pied"</item>
-    <item msgid="8551370809943066311">"Manette de jeu"</item>
-    <item msgid="6613149523957360458">"Palette de couleurs d\'artiste"</item>
-    <item msgid="9183052350354526560">"Flocon de neige"</item>
-    <item msgid="1589939022701519138">"Parasol"</item>
-    <item msgid="4861295101659969850">"Outils d\'atelier"</item>
-    <item msgid="6817957885445446596">"Tente"</item>
-    <item msgid="5923605807513411961">"Bobine de film"</item>
-    <item msgid="7669095367618738070">"Livre"</item>
-    <item msgid="2852435596978961693">"Fleur de lotus"</item>
-    <item msgid="7021313931065738980">"Esprit d\'une personne"</item>
-    <item msgid="6988657977896749103">"Écouteurs"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Train"</item>
-    <item msgid="165142533839452848">"Voiture"</item>
-    <item msgid="5359765481365992847">"Croissant"</item>
+    <item msgid="5673625795644364100">"Ne pas déranger"</item>
+    <item msgid="1423820834865831361">"Personne qui court"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Haltère"</item>
+    <item msgid="2730180105015616518">"Natation"</item>
+    <item msgid="2666922823253345958">"Personne faisant de la randonnée"</item>
+    <item msgid="8234880356472211396">"Personne lançant une balle"</item>
+    <item msgid="4642980625253001443">"Personne donnant un coup de pied"</item>
+    <item msgid="4324795269518833500">"Manette de jeu"</item>
+    <item msgid="7789966425125441125">"Palette de couleurs d\'artiste"</item>
+    <item msgid="663512680597461570">"Flocon de neige"</item>
+    <item msgid="7952183800501346803">"Parasol"</item>
+    <item msgid="799139025758265891">"Outils d\'atelier"</item>
+    <item msgid="1330084588359129896">"Tente"</item>
+    <item msgid="3861584909935022342">"Bobine de film"</item>
+    <item msgid="5827426100157335512">"Livre"</item>
+    <item msgid="8585828346253128384">"Fleur de lotus"</item>
+    <item msgid="8788370542815300188">"Esprit d\'une personne"</item>
+    <item msgid="7287354964767553293">"Écouteurs"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Train"</item>
+    <item msgid="4903790544026923026">"Voiture"</item>
     <item msgid="5010405583912314582">"Fourchette et couteau"</item>
     <item msgid="8939998598599064900">"Panier"</item>
     <item msgid="3379605903308731893">"Enfant"</item>
