--- a/res/values-is/arrays.xml
+++ b/res/values-is/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Hópur fólks"</item>
     <item msgid="2270003903304578284">"Ljósapera"</item>
     <item msgid="4793496619091161864">"Dagatal"</item>
-    <item msgid="355583383827414575">"Manneskja að hlaupa"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Líkamsræktarlóð"</item>
-    <item msgid="1122491217891679043">"Sund"</item>
-    <item msgid="5825437763616894959">"Manneskja í fjallgöngu"</item>
-    <item msgid="7343381753556126903">"Manneskja hendir bolta"</item>
-    <item msgid="7785234702090595">"Manneskja sparkar"</item>
-    <item msgid="8551370809943066311">"Leikjafjarstýring"</item>
-    <item msgid="6613149523957360458">"Litaspjald listamanns"</item>
-    <item msgid="9183052350354526560">"Snjókorn"</item>
-    <item msgid="1589939022701519138">"Sólhlíf"</item>
-    <item msgid="4861295101659969850">"Verkfæri"</item>
-    <item msgid="6817957885445446596">"Tjald"</item>
-    <item msgid="5923605807513411961">"Gamaldags filma"</item>
-    <item msgid="7669095367618738070">"Bók"</item>
-    <item msgid="2852435596978961693">"Lótusblóm"</item>
-    <item msgid="7021313931065738980">"Hugur manneskju"</item>
-    <item msgid="6988657977896749103">"Heyrnartól"</item>
-    <item msgid="7175373369979188147">"Sjónvarp"</item>
-    <item msgid="8654852711800563054">"Lest"</item>
-    <item msgid="165142533839452848">"Bíll"</item>
-    <item msgid="5359765481365992847">"Smjördeigshorn"</item>
+    <item msgid="5673625795644364100">"Ónáðið ekki"</item>
+    <item msgid="1423820834865831361">"Manneskja að hlaupa"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Líkamsræktarlóð"</item>
+    <item msgid="2730180105015616518">"Sund"</item>
+    <item msgid="2666922823253345958">"Manneskja í fjallgöngu"</item>
+    <item msgid="8234880356472211396">"Manneskja hendir bolta"</item>
+    <item msgid="4642980625253001443">"Manneskja sparkar"</item>
+    <item msgid="4324795269518833500">"Leikjafjarstýring"</item>
+    <item msgid="7789966425125441125">"Litaspjald listamanns"</item>
+    <item msgid="663512680597461570">"Snjókorn"</item>
+    <item msgid="7952183800501346803">"Sólhlíf"</item>
+    <item msgid="799139025758265891">"Verkfæri"</item>
+    <item msgid="1330084588359129896">"Tjald"</item>
+    <item msgid="3861584909935022342">"Gamaldags filma"</item>
+    <item msgid="5827426100157335512">"Bók"</item>
+    <item msgid="8585828346253128384">"Lótusblóm"</item>
+    <item msgid="8788370542815300188">"Hugur manneskju"</item>
+    <item msgid="7287354964767553293">"Heyrnartól"</item>
+    <item msgid="2530059623783800987">"Sjónvarp"</item>
+    <item msgid="5307182323469376758">"Lest"</item>
+    <item msgid="4903790544026923026">"Bíll"</item>
     <item msgid="5010405583912314582">"Hnífur og gaffall"</item>
     <item msgid="8939998598599064900">"Innkaupakarfa"</item>
     <item msgid="3379605903308731893">"Barn"</item>
