--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Gruppo di persone"</item>
     <item msgid="2270003903304578284">"Lampadina"</item>
     <item msgid="4793496619091161864">"Calendario"</item>
-    <item msgid="355583383827414575">"Persona che corre"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Manubrio da palestra"</item>
-    <item msgid="1122491217891679043">"Nuoto"</item>
-    <item msgid="5825437763616894959">"Persona che fa un\'escursione"</item>
-    <item msgid="7343381753556126903">"Persona che lancia una palla"</item>
-    <item msgid="7785234702090595">"Persona che tira un calcio"</item>
-    <item msgid="8551370809943066311">"Controller di gioco"</item>
-    <item msgid="6613149523957360458">"Tavolozza dei colori da artista"</item>
-    <item msgid="9183052350354526560">"Fiocco di neve"</item>
-    <item msgid="1589939022701519138">"Ombrellone da spiaggia"</item>
-    <item msgid="4861295101659969850">"Strumenti per il workshop"</item>
-    <item msgid="6817957885445446596">"Tenda"</item>
-    <item msgid="5923605807513411961">"Pellicola"</item>
-    <item msgid="7669095367618738070">"Libro"</item>
-    <item msgid="2852435596978961693">"Fiore di loto"</item>
-    <item msgid="7021313931065738980">"Mente di una persona"</item>
-    <item msgid="6988657977896749103">"Cuffie"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Treno"</item>
-    <item msgid="165142533839452848">"Auto"</item>
-    <item msgid="5359765481365992847">"Croissant"</item>
+    <item msgid="5673625795644364100">"Non disturbare"</item>
+    <item msgid="1423820834865831361">"Persona che corre"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Manubrio da palestra"</item>
+    <item msgid="2730180105015616518">"Nuoto"</item>
+    <item msgid="2666922823253345958">"Persona che fa un\'escursione"</item>
+    <item msgid="8234880356472211396">"Persona che lancia una palla"</item>
+    <item msgid="4642980625253001443">"Persona che tira un calcio"</item>
+    <item msgid="4324795269518833500">"Controller di gioco"</item>
+    <item msgid="7789966425125441125">"Tavolozza dei colori da artista"</item>
+    <item msgid="663512680597461570">"Fiocco di neve"</item>
+    <item msgid="7952183800501346803">"Ombrellone da spiaggia"</item>
+    <item msgid="799139025758265891">"Strumenti per il workshop"</item>
+    <item msgid="1330084588359129896">"Tenda"</item>
+    <item msgid="3861584909935022342">"Pellicola"</item>
+    <item msgid="5827426100157335512">"Libro"</item>
+    <item msgid="8585828346253128384">"Fiore di loto"</item>
+    <item msgid="8788370542815300188">"Mente di una persona"</item>
+    <item msgid="7287354964767553293">"Cuffie"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Treno"</item>
+    <item msgid="4903790544026923026">"Auto"</item>
     <item msgid="5010405583912314582">"Forchetta e coltello"</item>
     <item msgid="8939998598599064900">"Carrello"</item>
     <item msgid="3379605903308731893">"Figlio"</item>
