--- a/res/values-km/arrays.xml
+++ b/res/values-km/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"ក្រុមមនុស្ស"</item>
     <item msgid="2270003903304578284">"អំពូលភ្លើង"</item>
     <item msgid="4793496619091161864">"ប្រតិទិន"</item>
-    <item msgid="355583383827414575">"មនុស្សរត់"</item>
-    <item msgid="8001358013148723500">"កូនហ្គោល"</item>
-    <item msgid="755931364157422565">"ដុំដែកនៅកន្លែងហាត់ប្រាណ"</item>
-    <item msgid="1122491217891679043">"ការហែលទឹក"</item>
-    <item msgid="5825437763616894959">"មនុស្សកំពុងដើរកាត់​ព្រៃភ្នំ"</item>
-    <item msgid="7343381753556126903">"មនុស្សកំពុងគប់បាល់"</item>
-    <item msgid="7785234702090595">"មនុស្សកំពុងធាក់"</item>
-    <item msgid="8551370809943066311">"ឧបករណ៍បញ្ជាហ្គេម"</item>
-    <item msgid="6613149523957360458">"ក្ដារ​លាយ​ពណ៌វិចិត្រករ"</item>
-    <item msgid="9183052350354526560">"ផ្កាព្រិល"</item>
-    <item msgid="1589939022701519138">"ឆត្រនៅតាមឆ្នេរ"</item>
-    <item msgid="4861295101659969850">"ឧបករណ៍រោងជាង"</item>
-    <item msgid="6817957885445446596">"តង់"</item>
-    <item msgid="5923605807513411961">"ដុំហ្វីលភាពយន្ត"</item>
-    <item msgid="7669095367618738070">"សៀវភៅ"</item>
-    <item msgid="2852435596978961693">"ផ្កា​ឈូក"</item>
-    <item msgid="7021313931065738980">"ចិត្តរបស់មនុស្ស"</item>
-    <item msgid="6988657977896749103">"កាស"</item>
-    <item msgid="7175373369979188147">"ទូរទស្សន៍"</item>
-    <item msgid="8654852711800563054">"រថភ្លើង"</item>
-    <item msgid="165142533839452848">"រថយន្ត"</item>
-    <item msgid="5359765481365992847">"នំក្រ័រសង់"</item>
+    <item msgid="5673625795644364100">"កុំ​រំខាន"</item>
+    <item msgid="1423820834865831361">"មនុស្សរត់"</item>
+    <item msgid="2037298830718732608">"កូនហ្គោល"</item>
+    <item msgid="2197835014443491074">"ដុំដែកនៅកន្លែងហាត់ប្រាណ"</item>
+    <item msgid="2730180105015616518">"ការហែលទឹក"</item>
+    <item msgid="2666922823253345958">"មនុស្សកំពុងដើរកាត់​ព្រៃភ្នំ"</item>
+    <item msgid="8234880356472211396">"មនុស្សកំពុងគប់បាល់"</item>
+    <item msgid="4642980625253001443">"មនុស្សកំពុងធាក់"</item>
+    <item msgid="4324795269518833500">"ឧបករណ៍បញ្ជាហ្គេម"</item>
+    <item msgid="7789966425125441125">"ក្ដារ​លាយ​ពណ៌វិចិត្រករ"</item>
+    <item msgid="663512680597461570">"ផ្កាព្រិល"</item>
+    <item msgid="7952183800501346803">"ឆត្រនៅតាមឆ្នេរ"</item>
+    <item msgid="799139025758265891">"ឧបករណ៍រោងជាង"</item>
+    <item msgid="1330084588359129896">"តង់"</item>
+    <item msgid="3861584909935022342">"ដុំហ្វីលភាពយន្ត"</item>
+    <item msgid="5827426100157335512">"សៀវភៅ"</item>
+    <item msgid="8585828346253128384">"ផ្កា​ឈូក"</item>
+    <item msgid="8788370542815300188">"ចិត្តរបស់មនុស្ស"</item>
+    <item msgid="7287354964767553293">"កាស"</item>
+    <item msgid="2530059623783800987">"ទូរទស្សន៍"</item>
+    <item msgid="5307182323469376758">"រថភ្លើង"</item>
+    <item msgid="4903790544026923026">"រថយន្ត"</item>
     <item msgid="5010405583912314582">"សម ​និង​កាំបិត"</item>
     <item msgid="8939998598599064900">"រទេះទិញទំនិញ"</item>
     <item msgid="3379605903308731893">"កុមារ"</item>
