--- a/res/values-ky/arrays.xml
+++ b/res/values-ky/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Адамдардын тобу"</item>
     <item msgid="2270003903304578284">"Электр лампасы"</item>
     <item msgid="4793496619091161864">"Жылнаама"</item>
-    <item msgid="355583383827414575">"Чуркап бараткан киши"</item>
-    <item msgid="8001358013148723500">"Гольф"</item>
-    <item msgid="755931364157422565">"Спортзалдагы гантель"</item>
-    <item msgid="1122491217891679043">"Сууда сүзүү"</item>
-    <item msgid="5825437763616894959">"Сейилдеп бараткан киши"</item>
-    <item msgid="7343381753556126903">"Топ ыргытып жаткан киши"</item>
-    <item msgid="7785234702090595">"Тээп жаткан киши"</item>
-    <item msgid="8551370809943066311">"Оюн көзөмөлдөгүчү"</item>
-    <item msgid="6613149523957360458">"Сүрөтчүнүн түстөр топтому"</item>
-    <item msgid="9183052350354526560">"Кар бүртүгү"</item>
-    <item msgid="1589939022701519138">"Кумдуу жээктеги чатыр"</item>
-    <item msgid="4861295101659969850">"Устаканадагы аспаптар"</item>
-    <item msgid="6817957885445446596">"Чатыр"</item>
-    <item msgid="5923605807513411961">"Тасма түрмөгү"</item>
-    <item msgid="7669095367618738070">"Аудиокитеп"</item>
-    <item msgid="2852435596978961693">"Лотос гүлү"</item>
-    <item msgid="7021313931065738980">"Адамдын акылы"</item>
-    <item msgid="6988657977896749103">"Гарнитура"</item>
-    <item msgid="7175373369979188147">"Сыналгы"</item>
-    <item msgid="8654852711800563054">"Поезд"</item>
-    <item msgid="165142533839452848">"Унаа"</item>
-    <item msgid="5359765481365992847">"Круассан"</item>
+    <item msgid="5673625795644364100">"Тынчымды алба"</item>
+    <item msgid="1423820834865831361">"Чуркап бараткан киши"</item>
+    <item msgid="2037298830718732608">"Гольф"</item>
+    <item msgid="2197835014443491074">"Спортзалдагы гантель"</item>
+    <item msgid="2730180105015616518">"Сууда сүзүү"</item>
+    <item msgid="2666922823253345958">"Сейилдеп бараткан киши"</item>
+    <item msgid="8234880356472211396">"Топ ыргытып жаткан киши"</item>
+    <item msgid="4642980625253001443">"Тээп жаткан киши"</item>
+    <item msgid="4324795269518833500">"Оюн көзөмөлдөгүчү"</item>
+    <item msgid="7789966425125441125">"Сүрөтчүнүн түстөр топтому"</item>
+    <item msgid="663512680597461570">"Кар бүртүгү"</item>
+    <item msgid="7952183800501346803">"Кумдуу жээктеги чатыр"</item>
+    <item msgid="799139025758265891">"Устаканадагы аспаптар"</item>
+    <item msgid="1330084588359129896">"Чатыр"</item>
+    <item msgid="3861584909935022342">"Тасма түрмөгү"</item>
+    <item msgid="5827426100157335512">"Аудиокитеп"</item>
+    <item msgid="8585828346253128384">"Лотос гүлү"</item>
+    <item msgid="8788370542815300188">"Адамдын акылы"</item>
+    <item msgid="7287354964767553293">"Гарнитура"</item>
+    <item msgid="2530059623783800987">"Сыналгы"</item>
+    <item msgid="5307182323469376758">"Поезд"</item>
+    <item msgid="4903790544026923026">"Унаа"</item>
     <item msgid="5010405583912314582">"Вилка жана бычак"</item>
     <item msgid="8939998598599064900">"Себет"</item>
     <item msgid="3379605903308731893">"Бала"</item>
