--- a/res/values-lt/arrays.xml
+++ b/res/values-lt/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Žmonių grupė"</item>
     <item msgid="2270003903304578284">"Lemputė"</item>
     <item msgid="4793496619091161864">"Kalendorius"</item>
-    <item msgid="355583383827414575">"Bėgantis asmuo"</item>
-    <item msgid="8001358013148723500">"Golfas"</item>
-    <item msgid="755931364157422565">"Sporto hanteliai"</item>
-    <item msgid="1122491217891679043">"Plaukimas"</item>
-    <item msgid="5825437763616894959">"Žygiuojantis asmuo"</item>
-    <item msgid="7343381753556126903">"Kamuolį metantis asmuo"</item>
-    <item msgid="7785234702090595">"Spiriantis asmuo"</item>
-    <item msgid="8551370809943066311">"Žaidimų valdiklis"</item>
-    <item msgid="6613149523957360458">"Atlikėjo spalvų gama"</item>
-    <item msgid="9183052350354526560">"Snaigė"</item>
-    <item msgid="1589939022701519138">"Paplūdimio skėtis"</item>
-    <item msgid="4861295101659969850">"Darbo įrankiai"</item>
-    <item msgid="6817957885445446596">"Palapinė"</item>
-    <item msgid="5923605807513411961">"Kino juosta"</item>
-    <item msgid="7669095367618738070">"Knyga"</item>
-    <item msgid="2852435596978961693">"Lotoso žiedas"</item>
-    <item msgid="7021313931065738980">"Asmens mintis"</item>
-    <item msgid="6988657977896749103">"Ausinės"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Traukinys"</item>
-    <item msgid="165142533839452848">"Automobilis"</item>
-    <item msgid="5359765481365992847">"Prancūziškas ragelis"</item>
+    <item msgid="5673625795644364100">"Netrukdymo režimas"</item>
+    <item msgid="1423820834865831361">"Bėgantis asmuo"</item>
+    <item msgid="2037298830718732608">"Golfas"</item>
+    <item msgid="2197835014443491074">"Sporto hanteliai"</item>
+    <item msgid="2730180105015616518">"Plaukimas"</item>
+    <item msgid="2666922823253345958">"Žygiuojantis asmuo"</item>
+    <item msgid="8234880356472211396">"Kamuolį metantis asmuo"</item>
+    <item msgid="4642980625253001443">"Spiriantis asmuo"</item>
+    <item msgid="4324795269518833500">"Žaidimų valdiklis"</item>
+    <item msgid="7789966425125441125">"Atlikėjo spalvų gama"</item>
+    <item msgid="663512680597461570">"Snaigė"</item>
+    <item msgid="7952183800501346803">"Paplūdimio skėtis"</item>
+    <item msgid="799139025758265891">"Darbo įrankiai"</item>
+    <item msgid="1330084588359129896">"Palapinė"</item>
+    <item msgid="3861584909935022342">"Kino juosta"</item>
+    <item msgid="5827426100157335512">"Knyga"</item>
+    <item msgid="8585828346253128384">"Lotoso žiedas"</item>
+    <item msgid="8788370542815300188">"Asmens mintis"</item>
+    <item msgid="7287354964767553293">"Ausinės"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Traukinys"</item>
+    <item msgid="4903790544026923026">"Automobilis"</item>
     <item msgid="5010405583912314582">"Šakutė ir peilis"</item>
     <item msgid="8939998598599064900">"Pirkinių krepšelis"</item>
     <item msgid="3379605903308731893">"Vaikas"</item>
