--- a/res/values-ml/arrays.xml
+++ b/res/values-ml/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"ആളുകളുടെ കൂട്ടം"</item>
     <item msgid="2270003903304578284">"ലൈറ്റ്ബൾബ്"</item>
     <item msgid="4793496619091161864">"കലണ്ടർ"</item>
-    <item msgid="355583383827414575">"ഓടുന്ന വ്യക്തി"</item>
-    <item msgid="8001358013148723500">"ഗോൾഫ്"</item>
-    <item msgid="755931364157422565">"ജിം ഡംബെൽ"</item>
-    <item msgid="1122491217891679043">"നീന്തൽ"</item>
-    <item msgid="5825437763616894959">"ഹൈക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
-    <item msgid="7343381753556126903">"പന്ത് എറിയുന്ന വ്യക്തി"</item>
-    <item msgid="7785234702090595">"കിക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
-    <item msgid="8551370809943066311">"ഗെയിം കൺട്രോളർ"</item>
-    <item msgid="6613149523957360458">"ആർട്ടിസ്റ്റിന്റെ വർണ്ണ പാലെറ്റ്"</item>
-    <item msgid="9183052350354526560">"മഞ്ഞുകട്ട"</item>
-    <item msgid="1589939022701519138">"ബീച്ച് കുട"</item>
-    <item msgid="4861295101659969850">"വർക്ക്‌ഷോപ്പ് ടൂളുകൾ"</item>
-    <item msgid="6817957885445446596">"ടെന്റ്"</item>
-    <item msgid="5923605807513411961">"ഫിലിം റീൽ"</item>
-    <item msgid="7669095367618738070">"പുസ്‌തകം"</item>
-    <item msgid="2852435596978961693">"താമരപ്പൂവ്"</item>
-    <item msgid="7021313931065738980">"മനസ്സ്"</item>
-    <item msgid="6988657977896749103">"ഹെഡ്‌ഫോണുകൾ"</item>
-    <item msgid="7175373369979188147">"ടിവി"</item>
-    <item msgid="8654852711800563054">"ട്രെയിൻ"</item>
-    <item msgid="165142533839452848">"കാർ"</item>
-    <item msgid="5359765481365992847">"ക്രോയ്‌സെന്റ്"</item>
+    <item msgid="5673625795644364100">"ശല്യപ്പെടുത്തരുത്"</item>
+    <item msgid="1423820834865831361">"ഓടുന്ന വ്യക്തി"</item>
+    <item msgid="2037298830718732608">"ഗോൾഫ്"</item>
+    <item msgid="2197835014443491074">"ജിം ഡംബെൽ"</item>
+    <item msgid="2730180105015616518">"നീന്തൽ"</item>
+    <item msgid="2666922823253345958">"ഹൈക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
+    <item msgid="8234880356472211396">"പന്ത് എറിയുന്ന വ്യക്തി"</item>
+    <item msgid="4642980625253001443">"കിക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
+    <item msgid="4324795269518833500">"ഗെയിം കൺട്രോളർ"</item>
+    <item msgid="7789966425125441125">"ആർട്ടിസ്റ്റിന്റെ വർണ്ണ പാലെറ്റ്"</item>
+    <item msgid="663512680597461570">"മഞ്ഞുകട്ട"</item>
+    <item msgid="7952183800501346803">"ബീച്ച് കുട"</item>
+    <item msgid="799139025758265891">"വർക്ക്‌ഷോപ്പ് ടൂളുകൾ"</item>
+    <item msgid="1330084588359129896">"ടെന്റ്"</item>
+    <item msgid="3861584909935022342">"ഫിലിം റീൽ"</item>
+    <item msgid="5827426100157335512">"പുസ്‌തകം"</item>
+    <item msgid="8585828346253128384">"താമരപ്പൂവ്"</item>
+    <item msgid="8788370542815300188">"മനസ്സ്"</item>
+    <item msgid="7287354964767553293">"ഹെഡ്‌ഫോണുകൾ"</item>
+    <item msgid="2530059623783800987">"ടിവി"</item>
+    <item msgid="5307182323469376758">"ട്രെയിൻ"</item>
+    <item msgid="4903790544026923026">"കാർ"</item>
     <item msgid="5010405583912314582">"ഫോർക്കും കത്തിയും"</item>
     <item msgid="8939998598599064900">"ഷോപ്പിംഗ് കാർട്ട്"</item>
     <item msgid="3379605903308731893">"കുട്ടി"</item>
