--- a/res/values-mn/arrays.xml
+++ b/res/values-mn/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Бүлэг хүмүүс"</item>
     <item msgid="2270003903304578284">"Чийдэн"</item>
     <item msgid="4793496619091161864">"Календарь"</item>
-    <item msgid="355583383827414575">"Гүйж буй хүн"</item>
-    <item msgid="8001358013148723500">"Гольф"</item>
-    <item msgid="755931364157422565">"Биеийн тамирын заалны гантель"</item>
-    <item msgid="1122491217891679043">"Усанд сэлэлт"</item>
-    <item msgid="5825437763616894959">"Явган аялж буй хүн"</item>
-    <item msgid="7343381753556126903">"Бөмбөг шидэж буй хүн"</item>
-    <item msgid="7785234702090595">"Өшиглөж буй хүн"</item>
-    <item msgid="8551370809943066311">"Тоглоомын удирдлага"</item>
-    <item msgid="6613149523957360458">"Уран бүтээлчийн өнгөний нийлүүр"</item>
-    <item msgid="9183052350354526560">"Цасан ширхэг"</item>
-    <item msgid="1589939022701519138">"Далайн эргийн шүхэр"</item>
-    <item msgid="4861295101659969850">"Урлангийн багаж хэрэгсэл"</item>
-    <item msgid="6817957885445446596">"Майхан"</item>
-    <item msgid="5923605807513411961">"Зургийн хальс"</item>
-    <item msgid="7669095367618738070">"Ном"</item>
-    <item msgid="2852435596978961693">"Бадамлянхуа цэцэг"</item>
-    <item msgid="7021313931065738980">"Хүний оюун ухаан"</item>
-    <item msgid="6988657977896749103">"Чихэвч"</item>
-    <item msgid="7175373369979188147">"ТВ"</item>
-    <item msgid="8654852711800563054">"Галт тэрэг"</item>
-    <item msgid="165142533839452848">"Машин"</item>
-    <item msgid="5359765481365992847">"Круассан"</item>
+    <item msgid="5673625795644364100">"Бүү саад бол"</item>
+    <item msgid="1423820834865831361">"Гүйж буй хүн"</item>
+    <item msgid="2037298830718732608">"Гольф"</item>
+    <item msgid="2197835014443491074">"Биеийн тамирын заалны гантель"</item>
+    <item msgid="2730180105015616518">"Усанд сэлэлт"</item>
+    <item msgid="2666922823253345958">"Явган аялж буй хүн"</item>
+    <item msgid="8234880356472211396">"Бөмбөг шидэж буй хүн"</item>
+    <item msgid="4642980625253001443">"Өшиглөж буй хүн"</item>
+    <item msgid="4324795269518833500">"Тоглоомын удирдлага"</item>
+    <item msgid="7789966425125441125">"Уран бүтээлчийн өнгөний нийлүүр"</item>
+    <item msgid="663512680597461570">"Цасан ширхэг"</item>
+    <item msgid="7952183800501346803">"Далайн эргийн шүхэр"</item>
+    <item msgid="799139025758265891">"Урлангийн багаж хэрэгсэл"</item>
+    <item msgid="1330084588359129896">"Майхан"</item>
+    <item msgid="3861584909935022342">"Зургийн хальс"</item>
+    <item msgid="5827426100157335512">"Ном"</item>
+    <item msgid="8585828346253128384">"Бадамлянхуа цэцэг"</item>
+    <item msgid="8788370542815300188">"Хүний оюун ухаан"</item>
+    <item msgid="7287354964767553293">"Чихэвч"</item>
+    <item msgid="2530059623783800987">"ТВ"</item>
+    <item msgid="5307182323469376758">"Галт тэрэг"</item>
+    <item msgid="4903790544026923026">"Машин"</item>
     <item msgid="5010405583912314582">"Хутга, сэрээ"</item>
     <item msgid="8939998598599064900">"Худалдан авалтын сагс"</item>
     <item msgid="3379605903308731893">"Хүүхэд"</item>
