--- a/res/values-ne/arrays.xml
+++ b/res/values-ne/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"मान्छेहरूको समूह"</item>
     <item msgid="2270003903304578284">"लाइटबल्ब"</item>
     <item msgid="4793496619091161864">"पात्रो"</item>
-    <item msgid="355583383827414575">"दौडिरहेको व्यक्ति"</item>
-    <item msgid="8001358013148723500">"गल्फ"</item>
-    <item msgid="755931364157422565">"व्यायामशालामा प्रयोग गरिने डम्बेल"</item>
-    <item msgid="1122491217891679043">"पौडी"</item>
-    <item msgid="5825437763616894959">"पदयात्रा गरिरहेको व्यक्ति"</item>
-    <item msgid="7343381753556126903">"बल फ्याँकिरहेको व्यक्ति"</item>
-    <item msgid="7785234702090595">"किक हानिरहेको व्यक्ति"</item>
-    <item msgid="8551370809943066311">"गेम कन्ट्रोलर"</item>
-    <item msgid="6613149523957360458">"आर्टिस्ट कलर प्यालेट"</item>
-    <item msgid="9183052350354526560">"हिमकण"</item>
-    <item msgid="1589939022701519138">"समुद्री तटमा प्रयोग गरिने छाता"</item>
-    <item msgid="4861295101659969850">"वर्कसप प्रयोग गरिने औजारहरू"</item>
-    <item msgid="6817957885445446596">"पाल"</item>
-    <item msgid="5923605807513411961">"फिल्म रिल"</item>
-    <item msgid="7669095367618738070">"पुस्तक"</item>
-    <item msgid="2852435596978961693">"कमल फूल"</item>
-    <item msgid="7021313931065738980">"व्यक्तिको दिमाग"</item>
-    <item msgid="6988657977896749103">"हेडफोन"</item>
-    <item msgid="7175373369979188147">"टिभी"</item>
-    <item msgid="8654852711800563054">"रेल"</item>
-    <item msgid="165142533839452848">"कार"</item>
-    <item msgid="5359765481365992847">"क्रोसान्ट"</item>
+    <item msgid="5673625795644364100">"Do Not Disturb"</item>
+    <item msgid="1423820834865831361">"दौडिरहेको व्यक्ति"</item>
+    <item msgid="2037298830718732608">"गल्फ"</item>
+    <item msgid="2197835014443491074">"व्यायामशालामा प्रयोग गरिने डम्बेल"</item>
+    <item msgid="2730180105015616518">"पौडी"</item>
+    <item msgid="2666922823253345958">"पदयात्रा गरिरहेको व्यक्ति"</item>
+    <item msgid="8234880356472211396">"बल फ्याँकिरहेको व्यक्ति"</item>
+    <item msgid="4642980625253001443">"किक हानिरहेको व्यक्ति"</item>
+    <item msgid="4324795269518833500">"गेम कन्ट्रोलर"</item>
+    <item msgid="7789966425125441125">"आर्टिस्ट कलर प्यालेट"</item>
+    <item msgid="663512680597461570">"हिमकण"</item>
+    <item msgid="7952183800501346803">"समुद्री तटमा प्रयोग गरिने छाता"</item>
+    <item msgid="799139025758265891">"वर्कसप प्रयोग गरिने औजारहरू"</item>
+    <item msgid="1330084588359129896">"पाल"</item>
+    <item msgid="3861584909935022342">"फिल्म रिल"</item>
+    <item msgid="5827426100157335512">"पुस्तक"</item>
+    <item msgid="8585828346253128384">"कमल फूल"</item>
+    <item msgid="8788370542815300188">"व्यक्तिको दिमाग"</item>
+    <item msgid="7287354964767553293">"हेडफोन"</item>
+    <item msgid="2530059623783800987">"टिभी"</item>
+    <item msgid="5307182323469376758">"रेल"</item>
+    <item msgid="4903790544026923026">"कार"</item>
     <item msgid="5010405583912314582">"काँटा र चक्कु"</item>
     <item msgid="8939998598599064900">"सपिङ कार्ट"</item>
     <item msgid="3379605903308731893">"बच्चा"</item>
