--- a/res/values-pt/arrays.xml
+++ b/res/values-pt/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Grupo de pessoas"</item>
     <item msgid="2270003903304578284">"Lâmpada"</item>
     <item msgid="4793496619091161864">"Calendário"</item>
-    <item msgid="355583383827414575">"Pessoa correndo"</item>
-    <item msgid="8001358013148723500">"Golfe"</item>
-    <item msgid="755931364157422565">"Peso de academia"</item>
-    <item msgid="1122491217891679043">"Natação"</item>
-    <item msgid="5825437763616894959">"Pessoa escalando"</item>
-    <item msgid="7343381753556126903">"Pessoa jogando bola"</item>
-    <item msgid="7785234702090595">"Pessoa chutando"</item>
-    <item msgid="8551370809943066311">"Controle de jogo"</item>
-    <item msgid="6613149523957360458">"Paleta de cores do artista"</item>
-    <item msgid="9183052350354526560">"Floco de neve"</item>
-    <item msgid="1589939022701519138">"Guarda-sol"</item>
-    <item msgid="4861295101659969850">"Ferramentas"</item>
-    <item msgid="6817957885445446596">"Barraca"</item>
-    <item msgid="5923605807513411961">"Rolo de filme"</item>
-    <item msgid="7669095367618738070">"Livro"</item>
-    <item msgid="2852435596978961693">"Flor de lótus"</item>
-    <item msgid="7021313931065738980">"Mente humana"</item>
-    <item msgid="6988657977896749103">"Fones de ouvido"</item>
-    <item msgid="7175373369979188147">"TV"</item>
-    <item msgid="8654852711800563054">"Trem"</item>
-    <item msgid="165142533839452848">"Carro"</item>
-    <item msgid="5359765481365992847">"Croissant"</item>
+    <item msgid="5673625795644364100">"Não perturbe"</item>
+    <item msgid="1423820834865831361">"Pessoa correndo"</item>
+    <item msgid="2037298830718732608">"Golfe"</item>
+    <item msgid="2197835014443491074">"Peso de academia"</item>
+    <item msgid="2730180105015616518">"Natação"</item>
+    <item msgid="2666922823253345958">"Pessoa escalando"</item>
+    <item msgid="8234880356472211396">"Pessoa jogando bola"</item>
+    <item msgid="4642980625253001443">"Pessoa chutando"</item>
+    <item msgid="4324795269518833500">"Controle de jogo"</item>
+    <item msgid="7789966425125441125">"Paleta de cores do artista"</item>
+    <item msgid="663512680597461570">"Floco de neve"</item>
+    <item msgid="7952183800501346803">"Guarda-sol"</item>
+    <item msgid="799139025758265891">"Ferramentas"</item>
+    <item msgid="1330084588359129896">"Barraca"</item>
+    <item msgid="3861584909935022342">"Rolo de filme"</item>
+    <item msgid="5827426100157335512">"Livro"</item>
+    <item msgid="8585828346253128384">"Flor de lótus"</item>
+    <item msgid="8788370542815300188">"Mente humana"</item>
+    <item msgid="7287354964767553293">"Fones de ouvido"</item>
+    <item msgid="2530059623783800987">"TV"</item>
+    <item msgid="5307182323469376758">"Trem"</item>
+    <item msgid="4903790544026923026">"Carro"</item>
     <item msgid="5010405583912314582">"Garfo e faca"</item>
     <item msgid="8939998598599064900">"Carrinho de compras"</item>
     <item msgid="3379605903308731893">"Criança"</item>
