--- a/res/values-sq/arrays.xml
+++ b/res/values-sq/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Grup personash"</item>
     <item msgid="2270003903304578284">"Llambë"</item>
     <item msgid="4793496619091161864">"Kalendar"</item>
-    <item msgid="355583383827414575">"Person duke vrapuar"</item>
-    <item msgid="8001358013148723500">"Golf"</item>
-    <item msgid="755931364157422565">"Girë palestre"</item>
-    <item msgid="1122491217891679043">"Not"</item>
-    <item msgid="5825437763616894959">"Person në ekskursion"</item>
-    <item msgid="7343381753556126903">"Person duke hedhur topin"</item>
-    <item msgid="7785234702090595">"Person duke shkelmuar"</item>
-    <item msgid="8551370809943066311">"Kontrolluesi i lojës"</item>
-    <item msgid="6613149523957360458">"Paleta e ngjyrave e artistit"</item>
-    <item msgid="9183052350354526560">"Flok dëbore"</item>
-    <item msgid="1589939022701519138">"Çadër plazhi"</item>
-    <item msgid="4861295101659969850">"Vegla punishteje"</item>
-    <item msgid="6817957885445446596">"Tendë"</item>
-    <item msgid="5923605807513411961">"Bobina e filmit"</item>
-    <item msgid="7669095367618738070">"Libër"</item>
-    <item msgid="2852435596978961693">"Zambak uji"</item>
-    <item msgid="7021313931065738980">"Mendja e një personi"</item>
-    <item msgid="6988657977896749103">"Kufje"</item>
-    <item msgid="7175373369979188147">"Televizor"</item>
-    <item msgid="8654852711800563054">"Tren"</item>
-    <item msgid="165142533839452848">"Makinë"</item>
-    <item msgid="5359765481365992847">"Briosh"</item>
+    <item msgid="5673625795644364100">"Mos shqetëso"</item>
+    <item msgid="1423820834865831361">"Person duke vrapuar"</item>
+    <item msgid="2037298830718732608">"Golf"</item>
+    <item msgid="2197835014443491074">"Girë palestre"</item>
+    <item msgid="2730180105015616518">"Not"</item>
+    <item msgid="2666922823253345958">"Person në ekskursion"</item>
+    <item msgid="8234880356472211396">"Person duke hedhur topin"</item>
+    <item msgid="4642980625253001443">"Person duke shkelmuar"</item>
+    <item msgid="4324795269518833500">"Kontrolluesi i lojës"</item>
+    <item msgid="7789966425125441125">"Paleta e ngjyrave e artistit"</item>
+    <item msgid="663512680597461570">"Flok dëbore"</item>
+    <item msgid="7952183800501346803">"Çadër plazhi"</item>
+    <item msgid="799139025758265891">"Vegla punishteje"</item>
+    <item msgid="1330084588359129896">"Tendë"</item>
+    <item msgid="3861584909935022342">"Bobina e filmit"</item>
+    <item msgid="5827426100157335512">"Libër"</item>
+    <item msgid="8585828346253128384">"Zambak uji"</item>
+    <item msgid="8788370542815300188">"Mendja e një personi"</item>
+    <item msgid="7287354964767553293">"Kufje"</item>
+    <item msgid="2530059623783800987">"Televizor"</item>
+    <item msgid="5307182323469376758">"Tren"</item>
+    <item msgid="4903790544026923026">"Makinë"</item>
     <item msgid="5010405583912314582">"Pirun dhe thikë"</item>
     <item msgid="8939998598599064900">"Karroca e blerjes"</item>
     <item msgid="3379605903308731893">"Fëmijë"</item>
