--- a/res/values-uk/arrays.xml
+++ b/res/values-uk/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Група людей"</item>
     <item msgid="2270003903304578284">"Лампочка"</item>
     <item msgid="4793496619091161864">"Календар"</item>
-    <item msgid="355583383827414575">"Людина біжить"</item>
-    <item msgid="8001358013148723500">"Гольф"</item>
-    <item msgid="755931364157422565">"Спортивна гантель"</item>
-    <item msgid="1122491217891679043">"Плавання"</item>
-    <item msgid="5825437763616894959">"Людина в поході"</item>
-    <item msgid="7343381753556126903">"Людина кидає м’яч"</item>
-    <item msgid="7785234702090595">"Людина б’є ногою"</item>
-    <item msgid="8551370809943066311">"Ігровий контролер"</item>
-    <item msgid="6613149523957360458">"Палітра художника"</item>
-    <item msgid="9183052350354526560">"Сніжинка"</item>
-    <item msgid="1589939022701519138">"Пляжна парасоля"</item>
-    <item msgid="4861295101659969850">"Інструменти для майстерні"</item>
-    <item msgid="6817957885445446596">"Намет"</item>
-    <item msgid="5923605807513411961">"Кіноплівка"</item>
-    <item msgid="7669095367618738070">"Книга"</item>
-    <item msgid="2852435596978961693">"Квітка лотоса"</item>
-    <item msgid="7021313931065738980">"Людський розум"</item>
-    <item msgid="6988657977896749103">"Навушники"</item>
-    <item msgid="7175373369979188147">"Телевізор"</item>
-    <item msgid="8654852711800563054">"Поїзд"</item>
-    <item msgid="165142533839452848">"Автомобіль"</item>
-    <item msgid="5359765481365992847">"Круасан"</item>
+    <item msgid="5673625795644364100">"Не турбувати"</item>
+    <item msgid="1423820834865831361">"Людина біжить"</item>
+    <item msgid="2037298830718732608">"Гольф"</item>
+    <item msgid="2197835014443491074">"Спортивна гантель"</item>
+    <item msgid="2730180105015616518">"Плавання"</item>
+    <item msgid="2666922823253345958">"Людина в поході"</item>
+    <item msgid="8234880356472211396">"Людина кидає м’яч"</item>
+    <item msgid="4642980625253001443">"Людина б’є ногою"</item>
+    <item msgid="4324795269518833500">"Ігровий контролер"</item>
+    <item msgid="7789966425125441125">"Палітра художника"</item>
+    <item msgid="663512680597461570">"Сніжинка"</item>
+    <item msgid="7952183800501346803">"Пляжна парасоля"</item>
+    <item msgid="799139025758265891">"Інструменти для майстерні"</item>
+    <item msgid="1330084588359129896">"Намет"</item>
+    <item msgid="3861584909935022342">"Кіноплівка"</item>
+    <item msgid="5827426100157335512">"Книга"</item>
+    <item msgid="8585828346253128384">"Квітка лотоса"</item>
+    <item msgid="8788370542815300188">"Людський розум"</item>
+    <item msgid="7287354964767553293">"Навушники"</item>
+    <item msgid="2530059623783800987">"Телевізор"</item>
+    <item msgid="5307182323469376758">"Поїзд"</item>
+    <item msgid="4903790544026923026">"Автомобіль"</item>
     <item msgid="5010405583912314582">"Виделка й ніж"</item>
     <item msgid="8939998598599064900">"Кошик для покупок"</item>
     <item msgid="3379605903308731893">"Дитина"</item>
