--- a/res/values-zu/arrays.xml
+++ b/res/values-zu/arrays.xml
@@ -506,28 +506,28 @@
     <item msgid="2548100558260478605">"Iqembu labantu"</item>
     <item msgid="2270003903304578284">"Isibani sokukhanyisa"</item>
     <item msgid="4793496619091161864">"Ikhalenda"</item>
-    <item msgid="355583383827414575">"Umuntu ogijimayo"</item>
-    <item msgid="8001358013148723500">"Igalufu"</item>
-    <item msgid="755931364157422565">"Izinsimbi zasejimini"</item>
-    <item msgid="1122491217891679043">"Ukubhukuda"</item>
-    <item msgid="5825437763616894959">"Umuntu ogibela intaba"</item>
-    <item msgid="7343381753556126903">"Umuntu ophonsa ibhola"</item>
-    <item msgid="7785234702090595">"Umuntu okhahlelayo"</item>
-    <item msgid="8551370809943066311">"Isilawuli segeyimu"</item>
-    <item msgid="6613149523957360458">"Uhlu lwemifanekiso yemibala yeciko"</item>
-    <item msgid="9183052350354526560">"ISnowflake"</item>
-    <item msgid="1589939022701519138">"Isambulela sasebhishi"</item>
-    <item msgid="4861295101659969850">"Amathuluzi asendaweni yomsebenzi"</item>
-    <item msgid="6817957885445446596">"Itende"</item>
-    <item msgid="5923605807513411961">"Ireel yefilimu"</item>
-    <item msgid="7669095367618738070">"Incwadi"</item>
-    <item msgid="2852435596978961693">"Imbali yelotus"</item>
-    <item msgid="7021313931065738980">"Ingqondo yomuntu"</item>
-    <item msgid="6988657977896749103">"Amaheadphone"</item>
-    <item msgid="7175373369979188147">"I-TV"</item>
-    <item msgid="8654852711800563054">"Isitimela"</item>
-    <item msgid="165142533839452848">"Imoto"</item>
-    <item msgid="5359765481365992847">"ICroissant"</item>
+    <item msgid="5673625795644364100">"Ungaphazamisi"</item>
+    <item msgid="1423820834865831361">"Umuntu ogijimayo"</item>
+    <item msgid="2037298830718732608">"Igalufu"</item>
+    <item msgid="2197835014443491074">"Izinsimbi zasejimini"</item>
+    <item msgid="2730180105015616518">"Ukubhukuda"</item>
+    <item msgid="2666922823253345958">"Umuntu ogibela intaba"</item>
+    <item msgid="8234880356472211396">"Umuntu ophonsa ibhola"</item>
+    <item msgid="4642980625253001443">"Umuntu okhahlelayo"</item>
+    <item msgid="4324795269518833500">"Isilawuli segeyimu"</item>
+    <item msgid="7789966425125441125">"Uhlu lwemifanekiso yemibala yeciko"</item>
+    <item msgid="663512680597461570">"ISnowflake"</item>
+    <item msgid="7952183800501346803">"Isambulela sasebhishi"</item>
+    <item msgid="799139025758265891">"Amathuluzi asendaweni yomsebenzi"</item>
+    <item msgid="1330084588359129896">"Itende"</item>
+    <item msgid="3861584909935022342">"Ireel yefilimu"</item>
+    <item msgid="5827426100157335512">"Incwadi"</item>
+    <item msgid="8585828346253128384">"Imbali yelotus"</item>
+    <item msgid="8788370542815300188">"Ingqondo yomuntu"</item>
+    <item msgid="7287354964767553293">"Amaheadphone"</item>
+    <item msgid="2530059623783800987">"I-TV"</item>
+    <item msgid="5307182323469376758">"Isitimela"</item>
+    <item msgid="4903790544026923026">"Imoto"</item>
     <item msgid="5010405583912314582">"Imfoloko nommese"</item>
     <item msgid="8939998598599064900">"Ubhasikidi wokuthenga"</item>
     <item msgid="3379605903308731893">"Ingane"</item>
