Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I40a62c487bc7916eac67a878a59ce68a2139c694

--- a/res/values-eu/arrays.xml
+++ b/res/values-eu/arrays.xml
@@ -54,7 +54,7 @@
     <item msgid="3249903732481917388">"Autentifikatzen…"</item>
     <item msgid="7789156794775399931">"IP helbidea lortzen…"</item>
     <item msgid="492518447401534767">"Konektatuta"</item>
-    <item msgid="4322989558568666518">"Etenda"</item>
+    <item msgid="4322989558568666518">"Aldi baterako etenda"</item>
     <item msgid="286164147080824297">"Deskonektatzen…"</item>
     <item msgid="1628460745311787730">"Deskonektatuta"</item>
     <item msgid="4013828218541488949">"Ezin izan da konektatu"</item>
@@ -508,5 +508,7 @@
     <item msgid="4913577903148415331">"Ordua"</item>
     <item msgid="3653377604690057780">"Antzerkia"</item>
     <item msgid="3843711267408385410">"Lorea"</item>
+  </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
