--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -87,7 +87,7 @@
   <string-array name="bluetooth_leaudio_mode">
     <item msgid="5307106570247137458">"Disabled"</item>
     <item msgid="7781484297606806796">"Unicast"</item>
-    <item msgid="6667451574264144311">"Unicast and Broadcast"</item>
+    <item msgid="6667451574264144311">"Unicast и Broadcast"</item>
   </string-array>
   <string-array name="bluetooth_max_connected_audio_devices">
     <item msgid="4792793579224104167">"Использовать значение по умолчанию: <xliff:g id="DEFAULT_BLUETOOTH_MAX_CONNECTED_AUDIO_DEVICES">%1$d</xliff:g>"</item>
@@ -416,7 +416,7 @@
     <item msgid="2047166446768045816">"Без тарификации"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="91222619458919148">"Использовать случайный MAC-адрес"</item>
+    <item msgid="91222619458919148">"Случайный MAC-адрес"</item>
     <item msgid="741680937828608749">"MAC-адрес устройства"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
@@ -508,5 +508,7 @@
     <item msgid="4913577903148415331">"Время"</item>
     <item msgid="3653377604690057780">"Театр"</item>
     <item msgid="3843711267408385410">"Цветок"</item>
+  </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
