--- a/res/values-hi/arrays.xml
+++ b/res/values-hi/arrays.xml
@@ -87,7 +87,7 @@
   <string-array name="bluetooth_leaudio_mode">
     <item msgid="5307106570247137458">"Disabled"</item>
     <item msgid="7781484297606806796">"Unicast"</item>
-    <item msgid="6667451574264144311">"Unicast and Broadcast"</item>
+    <item msgid="6667451574264144311">"यूनिकास्ट और ब्रॉडकास्ट"</item>
   </string-array>
   <string-array name="bluetooth_max_connected_audio_devices">
     <item msgid="4792793579224104167">"सिस्टम की डिफ़ॉल्ट सेटिंग का इस्तेमाल करें: <xliff:g id="DEFAULT_BLUETOOTH_MAX_CONNECTED_AUDIO_DEVICES">%1$d</xliff:g>"</item>
@@ -508,5 +508,7 @@
     <item msgid="4913577903148415331">"समय"</item>
     <item msgid="3653377604690057780">"थिएटर"</item>
     <item msgid="3843711267408385410">"फूल"</item>
+  </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
