--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -249,7 +249,7 @@
     <item msgid="2348589304974534308">"କଲ୍‌ ଲଗ୍‌ ସଂଶୋଧନ କରନ୍ତୁ"</item>
     <item msgid="4089146706115315300">"କ୍ୟାଲେଣ୍ଡର ଦେଖନ୍ତୁ"</item>
     <item msgid="1305780729690198918">"କ୍ୟାଲେଣ୍ଡରରେ ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</item>
-    <item msgid="3461096740171440592">"ଲୋକେସନ୍‍"</item>
+    <item msgid="3461096740171440592">"ଲୋକେସନ"</item>
     <item msgid="6657539556093198883">"ପୋଷ୍ଟ ବିଜ୍ଞପ୍ତି"</item>
     <item msgid="8112680908829570200">"ଲୋକେସନ୍"</item>
     <item msgid="5019327268152480733">"ଫୋନ୍‌କୁ କଲ୍‌ କରନ୍ତୁ"</item>
@@ -508,5 +508,7 @@
     <item msgid="4913577903148415331">"ସମୟ"</item>
     <item msgid="3653377604690057780">"ଥିଏଟର"</item>
     <item msgid="3843711267408385410">"ଫୁଲ"</item>
+  </string-array>
+  <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
