mouse: Add preference toggle for Mouse swap primary button
Bug: 359349392
Bug: 352598211
Test: Local DUT with aconfig flags enabled, verified settings
      appeared and swaps the mouse primary button

Flag: com.android.hardware.input.mouse_swap_primary_button

Change-Id: Ib762240c10e2cadcfa4a23cd78df81fcad8197dd

--- a/res/xml/trackpad_settings.xml
+++ b/res/xml/trackpad_settings.xml
@@ -69,6 +69,13 @@
         settings:controller="com.android.settings.inputmethod.MouseReverseVerticalScrollingPreferenceController"
         android:order="45"/>
 
+    <SwitchPreferenceCompat
+        android:key="mouse_swap_primary_button"
+        android:title="@string/mouse_swap_primary_button"
+        android:summary="@string/mouse_swap_primary_button_summary"
+        settings:controller="com.android.settings.inputmethod.MouseSwapPrimaryButtonPreferenceController"
+        android:order="47"/>
+
     <Preference
         android:fragment="com.android.settings.inputmethod.PointerTouchpadFragment"
         android:key="pointer_and_touchpad"
